--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,23 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <title>Shul Finder</title>
 </head>
 <body>
-    <h1>ShulFinder</h1>
-    <form id='search-form'>
-        <label>Search by Name, City or State</label><br />
-        <input type='text' name='search-box' />
-        <button type='submit'>Search</button>
-    </form>
-    <form id='movement-filter'>
-        <label>Show Only:</label><br />
-        <input type='radio' value='conservative' name='movement'>Conservative</input><br />
-        <input type='radio' value='orthodox' name='movement'>Orthodox</input><br />
-        <input type='radio' value='reform' name='movement'>Reform</input> 
+    <header>
+        <nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
+            <a class='navbar-brand' href='#'>ShulFinder</a>
+            <ul class='navbar-nav mr-auto'>
+                <li class='nav-item'>
+                    <a href='/'>Home</a>
+                </li>
+                <li class='nav-item'>
+                    <a href='/map'>Map</a>
+                </li>
+                <li class='nav-item'>
+                    <a href='/about'>About</a>
+                </li>
+            </ul>
+            <form id='search-form' class='form-inline'>
+                <label class='navbar-text'>Search by Name, City or State</label><br />
+                <input type='text' name='search-box' aria-label='Search' />
+                <button class='btn btn-outline-info' type='submit'>Search</button>
+            </form>
+        </nav>
+    </header>
+    <form>
+        <label class='navbar-text'>Show Only</label>
+        <select name='movement' id='movement-filter'>
+            <option value='all'>Show All</option>
+            <option value='conservative'>Conservative</option>
+            <option value='orthodox'>Orthodox</option>
+            <option value='reform'>Reform</option>
+        </select>
     </form>
     <div id='search-results-container'>
-        <ul id='search-results-list'
+        <ul id='search-results-list'>
+
+        </ul>
     </div>
     <script src='js/search.js'></script>
 </body>
