navbar and cards

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -39,10 +39,7 @@
             <option value='reform'>Reform</option>
         </select>
     </form>
-    <div id='search-results-container'>
-        <ul id='search-results-list'>
-
-        </ul>
+    <div class='row row-cols-3' id='search-results-list'>
     </div>
     <script src='js/search.js'></script>
 </body>
