--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,9 @@
     <title>Shul Finder</title>
 </head>
 <body>
+    <!-- Begin Header -->
     <header>
+        <!-- Navigation links -->
         <nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
             <a class='navbar-brand' href='#'>ShulFinder</a>
             <ul class='navbar-nav mr-auto'>
@@ -25,25 +27,36 @@
                     <a href='/about'>About</a>
                 </li>
             </ul>
+
+            <!-- Search Bar -->
             <form id='search-form' class='form-inline'>
                 <label class='navbar-text'>Search by Name, City or State</label><br />
-                <input type='text' name='search-box' aria-label='Search' />
+                <input type='text' class='navbar-light' name='search-box' aria-label='Search' />
                 <button class='btn btn-outline-info' type='submit'>Search</button>
             </form>
         </nav>
     </header>
+
+    <!-- Movements filter -->
     <form>
         <label class='navbar-text'>Show Only</label>
         <select name='movement' id='movement-filter'>
             <option value='all'>Show All</option>
-            <option value='conservative'>Conservative</option>
-            <option value='orthodox'>Orthodox</option>
-            <option value='reform'>Reform</option>
         </select>
     </form>
+
+    <!-- Results container -->
+    <div class='container-fluid align-content-center' id='results-info'></div>
     <div class='row row-cols-3' id='search-results-list'>
     </div>
+
+    <!-- Footer -->
+    <div class='container-fluid'>
+        
+    </div>
+    <!-- Searching script -->
     <script src='js/search.js'></script>
+
     <!-- Bootstrap / jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
