--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,9 +30,8 @@
 
             <!-- Search Bar -->
             <form id='search-form' class='form-inline'>
-                <label class='navbar-text'>Search by Name, City or State</label><br />
-                <input type='text' class='navbar-light' name='search-box' aria-label='Search' />
-                <button class='btn btn-outline-info' type='submit'>Search</button>
+                <label class='navbar-text'>Search</label><br />
+                <input type='text' class='navbar-light' name='search-box' id='search-box' aria-label='Search' placeholder='Name, City or State' />
             </form>
         </nav>
     </header>
