--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,13 +6,14 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- Custom stylesheet -->
-    <link rel='stylesheet' href='stylesheets/style.css'>
+    <link rel='stylesheet' href='stylesheets/dist/style.css'>
+    <!-- CSP Policy -->
 
     <title>Shul Finder</title>
 </head>
 <body>
     <!-- Begin Header -->
-    <header>
+    <header class='sticky-top'>
         <!-- Navigation links -->
         <nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
             <a class='navbar-brand' href='#'>ShulFinder</a>
@@ -33,26 +34,45 @@
                 <label class='navbar-text'>Search</label><br />
                 <input type='text' class='navbar-light' name='search-box' id='search-box' aria-label='Search' placeholder='Name, City or State' />
             </form>
+
+            <!-- Options modal --> 
+            <button id='filters-toggle-btn' type='button' class='btn btn-outline-secondary' data-toggle='modal' data-target='#filters-menu'>Filters</button>
         </nav>
     </header>
 
-    <!-- Movements filter -->
-    <form>
-        <label class='navbar-text'>Show Only</label>
-        <select name='movement' id='movement-filter'>
-            <option value='all'>Show All</option>
-        </select>
-    </form>
+    <div class='modal' id='filters-menu' tabindex='-1' aria-labelledby='filtersMenuLabel' aria-hidden='true'>
+        <div class='modal-dialogue'>
+            <div class='modal-content'>
+                <div class='modal-header'>
+                    <h5 class='modal-title' id='filtersMenuLabel'>Filters</h5>
+                    <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class='modal-body'>
+                    <!-- Movements filter -->
+                    <form>
+                        <label class='navbar-text'>Show Only</label>
+                        <select name='movement' id='movement-filter'>
+                            <option value='all'>Show All</option>
+                        </select>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <!-- Results container -->
-    <div class='container-fluid align-content-center' id='results-info'></div>
-    <div class='row row-cols-3' id='search-results-list'>
+    <div id='results-info'></div>
+    <div id='search-results-list'>
     </div>
 
     <!-- Footer -->
-    <div class='container-fluid'>
-        
-    </div>
+    <footer class='bg-dark fixed-bottom'>
+        <h6>2020 Michelle Frattaroli</h6>
+    </footer>
     <!-- Searching script -->
     <script src='js/search.js'></script>
 
