--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -62,6 +62,10 @@ footer {
 div {
     .card {
         margin: .5rem;
+        box-shadow: 2px 2px 4px rgb(131, 131, 131);
+        &:hover {
+            background-color: #f4f7ff;
+        };
     }
 }
 .modal .modal-dialogue .modal-content {
