refactor views to partials

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,84 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!-- Custom stylesheet -->
-    <link rel='stylesheet' href='stylesheets/dist/style.css'>
-    <!-- CSP Policy -->
-
-    <title>Shul Finder</title>
-</head>
-<body>
-    <!-- Begin Header -->
-    <header class='sticky-top'>
-        <!-- Navigation links -->
-        <nav class='navbar navbar-expand-lg navbar-dark bg-dark'>
-            <a class='navbar-brand' href='#'>ShulFinder</a>
-            <ul class='navbar-nav mr-auto'>
-                <li class='nav-item'>
-                    <a href='/'>List</a>
-                </li>
-                <li class='nav-item'>
-                    <a href='/map'>Map</a>
-                </li>
-                <li class='nav-item'>
-                    <a href='/about'>About</a>
-                </li>
-            </ul>
-
-            <!-- Search Bar -->
-            <form id='search-form' class='form-inline'>
-                <label class='navbar-text'>Search</label><br />
-                <input type='text' class='navbar-light' name='search-box' id='search-box' aria-label='Search' placeholder='Name, City or State' />
-            </form>
-
-            <!-- Options modal --> 
-            <button id='filters-toggle-btn' type='button' class='btn btn-outline-secondary' data-toggle='modal' data-target='#filters-menu'>Filters</button>
-        </nav>
-    </header>
-
-    <div class='modal' id='filters-menu' tabindex='-1' aria-labelledby='filtersMenuLabel' aria-hidden='true'>
-        <div class='modal-dialogue'>
-            <div class='modal-content'>
-                <div class='modal-header'>
-                    <h5 class='modal-title' id='filtersMenuLabel'>Filters</h5>
-                    <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class='modal-body'>
-                    <!-- Movements filter -->
-                    <form>
-                        <label class='navbar-text'>Show Only</label>
-                        <select name='movement' id='movement-filter'>
-                            <option value='all'>Show All</option>
-                        </select>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
+{{>header}}
     <!-- Results container -->
     <div id='results-info'></div>
     <div id='search-results-list'>
     </div>
-
-    <!-- Footer -->
-    <footer class='bg-dark fixed-bottom'>
-        <h6>2020 Michelle Frattaroli</h6>
-    </footer>
-    <!-- Searching script -->
-    <script src='js/search.js'></script>
-
-    <!-- Bootstrap / jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-</body>
-</html>
+{{>footer}}
