--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -53,6 +53,12 @@ footer {
     width: 90vw;
 }
 
+#load-more {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 5rem;
+}
+
 #search-results-list {
     align-self: center;
     width: 90vw;
