--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,5 +2,8 @@
     <!-- Results container -->
     <div id='results-info'></div>
     <div id='search-results-list'>
+
+    </div>
+    <div id='load-more'>
     </div>
 {{>footer}}
