select mulitple movement filters

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -51,11 +51,10 @@
                 </div>
                 <div class='modal-body'>
                     <!-- Movements filter -->
-                    <form>
-                        <label class='navbar-text'>Show Only</label>
-                        <select name='movement' id='movement-filter'>
-                            <option value='all'>Show All</option>
-                        </select>
+                    <form id='filters'>
+
+                        
+                        
                     </form>
                 </div>
             </div>
