--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -34,6 +34,10 @@ footer {
     }
 }
 
+#filters {
+
+}
+
 #search-box {
     border-radius: 1rem;
     padding-left: .5rem;
@@ -64,7 +68,7 @@ footer {
     width: 90vw;
     display: grid;
     align-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(30em, 1fr))
+    grid-template-columns: repeat(auto-fit, minmax(20em, 1fr))
 }
 
 div {
