--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,17 @@
 {{>header}}
     <!-- Results container -->
-    <div id='results-info'></div>
+    <div id='results-info'>
+       
+    </div>
+    <div id='results-options'>
+        <label for='results-per-page'>Results per page: </label>
+        <select id='results-per-page'>
+            <option name='10' value='10'>10</option>
+            <option name='25' value='25'>25</option>
+            <option name='50' value='50'>50</option>
+            <option name='100' value='100'>100</option>
+        </select>
+    </div>
     <div id='search-results-list'>
 
     </div>
