--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -64,15 +64,37 @@ footer {
     width: 90vw;
     #reset-search {
         height: 100%;
-        color: red;
         padding-bottom: .2rem;
-        &:hover {
-            cursor: pointer;
-    
-        }
     }
 }
 
+.remove-button {
+    color: red;
+    &:hover {
+        cursor: pointer;
+        font-weight: bolder;
+        text-shadow: 1 1 2 $bgDark;
+    }
+}
+
+.filter-tab {
+    background-color: #fff;
+    border: 1px solid $fgDark;
+    border-radius: .2rem;
+    margin-left: .5rem;
+    padding-left: .3rem;
+    padding-right: .3rem;
+    &:hover {
+        box-shadow: 1px 1px 2px $bgDark;
+        cursor: pointer;
+    }
+}
+
+#selected-filters {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
 #load-more {
     display: flex;
     justify-content: center;
