--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,6 +12,7 @@
             <option name='100' value='100'>100</option>
         </select>
     </div>
+    <div id='selected-filters'></div>
     <div id='search-results-list'>
 
     </div>
