--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -45,8 +45,8 @@
             <div class='modal-content'>
                 <div class='modal-header'>
                     <h5 class='modal-title' id='filtersMenuLabel'>Filters</h5>
-                    <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
-                        <span aria-hidden="true">&times;</span>
+                    <button type='button' class='close' data-dismiss='modal' aria-label='Close' id='close-filters-menu'>
+                        <span aria-hidden="true">Close &times;</span>
                     </button>
                 </div>
                 <div class='modal-body'>
