begin mapkit integration

--- a/views/map.hbs
+++ b/views/map.hbs
@@ -1,6 +1,7 @@
 {{>header}}
     <!-- Map container -->
     <div id='map-container'>
-        <h5>Map integration via Apple Mapkit coming soon.</h5>
     </div>
+    <script src="https://cdn.apple-mapkit.com/mk/5.x.x/mapkit.js"></script>
+    <script src='js/map.js'></script>
 {{>footer}}
