--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,4 +18,6 @@
     </div>
     <div id='load-more'>
     </div>
+    <script src="js/domElements.js"></script>
+    <script src='js/events.js'></script>
 {{>footer}}
