public script dependencies

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,6 +18,10 @@
     </div>
     <div id='load-more'>
     </div>
+    
+    <!-- Searching script -->
+    <script src='js/search.js'></script>
     <script src="js/domElements.js"></script>
     <script src='js/events.js'></script>
+    <script src='js/geocode.js'></script>
 {{>footer}}
