begin map serch + annotations

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -33,6 +33,7 @@
             <form id='search-form' class='form-inline'>
                 <label class='navbar-text'>Search</label><br />
                 <input type='text' class='navbar-light' name='search-box' id='search-box' aria-label='Search' placeholder='Name, City or State' />
+                <button type='submit' class='btn btn-outline-success'>Search</button>
             </form>
 
             <!-- Options modal --> 
