--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -9,6 +9,17 @@ header {
     justify-content: space-between;
     align-items: center;
 
+    a {
+        text-decoration: none;
+        color: $nav-item;
+
+        &:hover {
+            cursor: pointer;
+            text-decoration: none;
+            color: $nav-hover;
+        }
+    }
+
     form {
         align-items: center;
 
