--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -20,29 +20,34 @@ header {
         }
     }
 
-    form {
-        align-items: center;
-
-        input {
-            height: 1.25em;
-            font-size: 1em;
-            margin: 0 .5em 0 1em;
-            background-color: $form-bg;
-            padding: .5em;
-            border-radius: .5em;
-        }
-
-        ;
-
-        button {
-            margin: auto 0 auto 0;
-            padding: 1em;
-            border: none;
-            border-radius: .5em;
-            background-color: $btn-primary-bg;
-            color: $btn-primary-fg;
-        }
+    .form-row {
+        display: flex;
+        align-items: flex-end;
     }
+
+    // form {
+    //     align-items: center;
+
+    //     input {
+    //         height: 1.25em;
+    //         font-size: 1em;
+    //         margin: 0 .5em 0 1em;
+    //         background-color: $form-bg;
+    //         padding: .5em;
+    //         border-radius: .5em;
+    //     }
+
+    //     ;
+
+    //     button {
+    //         margin: auto 0 auto 0;
+    //         padding: 1em;
+    //         border: none;
+    //         border-radius: .5em;
+    //         background-color: $btn-primary-bg;
+    //         color: $btn-primary-fg;
+    //     }
+    // }
 
     h3 {
         margin: 0;
