--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -49,6 +49,15 @@ body {
     padding: 0;
     text-align: center;
 
+    position: fixed;
+    z-index: 999;
+    top: 1em;
+    left: 5em;
+
+
+    opacity: .8;
+    width: 80%;
+
     h4,
     p {
         margin: 0;
@@ -100,6 +109,12 @@ body {
     align-items: center;
     box-shadow: inset 0 2px 4px $bg-light;
     background: -webkit-linear-gradient(left, $bg-dark, rgba(255, 255, 255, 0));
+
+    .load-more-btn {
+        background-color: rgba(0, 0, 0, 0.235);
+        border: 0;
+
+    }
 }
 
 .toggle-btn {
@@ -128,6 +143,33 @@ body {
         width: 20vw;
 
     }
+
+
+}
+
+.show-list {
+    position: absolute;
+    display: flex;
+    width: 10em;
+    flex-direction: column;
+    border-radius: 1em;
+    height: 100%;
+    margin-left: -2em;
+    margin-top: -1em;
+    overflow-y: auto;
+    overflow-x: auto;
+    transition: all 200ms ease-in-out 50ms;
+    z-index: 999;
+    align-items: center;
+    box-shadow: inset 0 2px 4px $bg-light;
+
+    button {
+        padding: 1em;
+        border-radius: 1em;
+        background-color: $bg-dark;
+        color: $bg-light;
+        opacity: .8;
+    }
 }
 
 .collapse {
@@ -137,7 +179,6 @@ body {
     border: 0;
     box-shadow: none;
     border-radius: 1em 0 0 1em;
-
 
 
     button {
@@ -202,4 +243,11 @@ body {
         margin: .5em;
     }
 
+}
+
+.toast {
+    position: absolute;
+    z-index: 999;
+    top: 5em;
+    right: 1em;
 }
