--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -40,6 +40,7 @@ body {
 
         .mk-map-view {
             border-radius: 0;
+            height: 90vh;
             border: 1px solid $bg-dark;
         }
     }
